--- a/_posts/devlog/kboopspredict/2024-12-03-post5.md
+++ b/_posts/devlog/kboopspredict/2024-12-03-post5.md
@@ -6,241 +6,294 @@ tags: kboopspredict
 ---
 
 ```python
-import requests
-from bs4 import BeautifulSoup
-from selenium import webdriver
-from selenium.webdriver.chrome.service import Service
-from webdriver_manager.chrome import ChromeDriverManager
-from selenium.webdriver.chrome.options import Options
-from selenium.webdriver.common.keys import Keys
-from selenium.webdriver.common.by import By
-import time
-from selenium.webdriver.support.ui import WebDriverWait
-from selenium.webdriver.support import expected_conditions as EC
-from selenium.common.exceptions import StaleElementReferenceException
-
-# 키와 몸무게가 있지 않은 선수 목록
-print(sorted(set(regular_season[regular_season['height/weight'].isnull()]['batter_name'])))
-
-# 선수 목록
-batter_height_weight_position = {
-    '강병식': '(우투좌타)',
-    '강봉규': '',
-    '강정호': '',
-    '고도현': '',
-    '고동진': '',
-    '고메즈': '',
-    '고영민': '',
-    '권용관': '',
-    '김경모': '',
-    '김경언': '',
-    '김광연': '',
-    '김대륙': '',
-    '김동주': '',
-    '김연훈': '',
-    '김원석': '',
-    '김원섭': '',
-    '김종찬': '',
-    '김종호': '',
-    '나바로': '',
-    '나성용': '',
-    '대니돈': '',
-    '로메로': '',
-    '로사리오': '',
-    '로티노': '',
-    '마낙길': '',
-    '모상기': '',
-    '문우람': '',
-    '박계현': '',
-    '박기남': '',
-    '박노민': '',
-    '박상규': '',
-    '박용근': '',
-    '박재상': '',
-    '박재홍': '',
-    '박준서': '',
-    '박진만': '',
-    '박진원': '',
-    '백승룡': '',
-    '성의준': '',
-    '손용석': '',
-    '송지만': '',
-    '스나이더': '',
-    '신경현': '',
-    '신명철': '',
-    '신현철': '',
-    '안치용': '',
-    '알드리지': '',
-    '양영동': '',
-    '연경흠': '',
-    '오재필': '',
-    '용덕한': '',
-    '우동균': '',
-    '유선정': '',
-    '유재혁': '',
-    '윤완주': '',
-    '윤요섭': '',
-    '이명환': '',
-    '이민재': '',
-    '이승재': '',
-    '이양기': '',
-    '이여상': '',
-    '이우민': '',
-    '이인구': '',
-    '이정식': '',
-    '이종범': '',
-    '이종환': '',
-    '이태원': '',
-    '이현곤': '',
-    '이홍구': '',
-    '이희근': '',
-    '임재철': '',
-    '장성호': '',
-    '전현태': '',
-    '정보명': '',
-    '정상교': '',
-    '정수성': '',
-    '정현석': '',
-    '정형식': '',
-    '조성환': '',
-    '조영훈': '',
-    '조인성': '',
-    '조중근': '',
-    '지재옥': '',
-    '진갑용': '',
-    '차일목': '',
-    '채상병': '',
-    '최경철': '',
-    '최동수': '',
-    '최민구': '',
-    '최선호': '',
-    '최훈락': '',
-    '칸투': '',
-    '테임즈': '',
-    '피에': '',
-    '한상훈': '',
-    '한윤섭': '',
-    '현재윤': '',
-    '홍성흔': '',
-    '황목치승': '',
-    '황선일': '',
-    '황정립': ''
-}
-
-```
-
-
-```python
-# Chrome 옵션 설정
-chrome_options = Options()
-# chrome_options.add_argument("--headless")  # 백그라운드 모드 실행 (필요시 주석 처리)
-
-# Service 객체 생성
-service = Service(ChromeDriverManager().install())
-
-# 크롬 웹드라이버 실행
-driver = webdriver.Chrome(service=service, options=chrome_options)
-wait = WebDriverWait(driver, 10)
-# 웹 페이지 로드
-driver.get('https://www.koreabaseball.com/Player/Search.aspx')
-
-height_weight_position_list = []
-for name in batter_height_weight_position.keys():
-    
-    batter_name_input = driver.find_element(By.CSS_SELECTOR, '#cphContents_cphContents_cphContents_txtSearchPlayerName')
-    try:
-        batter_name_input.clear()
-    except StaleElementReferenceException:
-        batter_name_input = driver.find_element(By.CSS_SELECTOR, '#cphContents_cphContents_cphContents_txtSearchPlayerName')
-        batter_name_input.clear()
-    batter_name_input.send_keys(name)
-    driver.find_element(By.CSS_SELECTOR, '#cphContents_cphContents_cphContents_btnSearch').click()
-
-    time.sleep(.5)
-    height_weight = wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, '#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(6)'))).text.replace(', ','/')
-    position = driver.find_element(By.CSS_SELECTOR, '#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(4)').text
-
-    
-    height_weight_position_list.append(height_weight+'/'+position)
-driver.quit()
-```
-
-
-```python
-'''
-위키백과에서 투타를 가져오는데, 몇 가지 동명이인이 있어 그 부분은 넘어갔다.
-넣지 못한 부분은 일일이 넣을 예정이다.
-'''
-
-for idx, name in enumerate(batter_height_weight_position.keys()):
-    rq = requests.get(f'https://ko.wikipedia.org/wiki/{name}')
-    time.sleep(.5)
-    # time.sleep(.2)
-    soup = BeautifulSoup(rq.text, 'html.parser')
-    try:
-        handle = soup.find_all('table')[0]
-        
-        df = pd.read_html(str(handle))[0]
-        if len(df.columns) > 2:
-            df = df.drop(df.columns[2], axis=1)
-        # display(df)
-        df = df.T
-
-        df.columns = df.loc[0]
-        df = df.drop(0, axis=0)
-        try:
-            hand = str(df['투구·타석'].values[0])
-        except:
-            hand = ''
-    except:
-        hand = ''
-
-    
-    height_weight_position_list[idx] = height_weight_position_list[idx]+'('+hand+')'
-```
-
-
-```python
-for idx, name in enumerate(batter_height_weight_position.keys()):
-    batter_height_weight_position[name] = height_weight_position_list[idx]
-batter_height_weight_position
-```
-
-
-```python
+import pandas as pd
+import matplotlib.pyplot as plt
+import matplotlib
+import matplotlib.font_manager as fm
+import os
+import seaborn as sns
+from IPython.display import display
+import numpy as np
+import re
 import json
 
-with open('output_data.json', 'w', encoding='utf-8') as json_file:
-    json.dump(batter_height_weight_position, json_file, ensure_ascii=False, indent=4)
+
+pd.options.display.max_columns = None
+%matplotlib inline
+
+# 한글 폰트
+plt.rcParams['font.family'] = 'NanumGothic'
+# 마이너스 깨짐 방지
+matplotlib.rcParams['axes.unicode_minus'] = False
+
+# 나눔 폰트 경로 설정
+font_path = '/usr/share/fonts/truetype/nanum/NanumGothic.ttf'  # 나눔 고딕의 경로
+font_prop = fm.FontProperties(fname=font_path).get_name()
+
+# 한글 폰트 설정}
+matplotlib.rcParams['font.family'] = font_prop
+
+# 전역 팔레트 설정 (예: 'Set2' 팔레트 사용)
+sns.set_palette('Set2')
 ```
 
 
 ```python
-# JSON 파일을 읽어들여 파이썬 객체로 변환
-with open('output_data.json', 'r', encoding='utf-8') as json_file:
+# 데이터 불러오기
+regular_season = pd.read_csv('../datas/Regular_Season_Batter.csv')
+
+# 키와 몸무게로 분석
+'''
+키와 몸무게 그리고 포지션에서도 결측치가 존재한다.
+'''
+
+# 결측치 확인
+print(regular_season.isna().sum())
+regular_season.head(2)
+```
+
+    batter_id             0
+    batter_name           0
+    year                  0
+    team                  0
+    avg                   0
+    G                     0
+    AB                    0
+    R                     0
+    H                     0
+    2B                    0
+    3B                    0
+    HR                    0
+    TB                    0
+    RBI                   0
+    SB                    0
+    CS                    0
+    BB                    0
+    HBP                   0
+    SO                    0
+    GDP                   0
+    SLG                   0
+    OBP                   0
+    E                     0
+    height/weight       802
+    year_born             0
+    position            802
+    career                0
+    starting_salary    1067
+    OPS                   0
+    dtype: int64
+
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_id</th>
+      <th>batter_name</th>
+      <th>year</th>
+      <th>team</th>
+      <th>avg</th>
+      <th>G</th>
+      <th>AB</th>
+      <th>R</th>
+      <th>H</th>
+      <th>2B</th>
+      <th>3B</th>
+      <th>HR</th>
+      <th>TB</th>
+      <th>RBI</th>
+      <th>SB</th>
+      <th>CS</th>
+      <th>BB</th>
+      <th>HBP</th>
+      <th>SO</th>
+      <th>GDP</th>
+      <th>SLG</th>
+      <th>OBP</th>
+      <th>E</th>
+      <th>height/weight</th>
+      <th>year_born</th>
+      <th>position</th>
+      <th>career</th>
+      <th>starting_salary</th>
+      <th>OPS</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>0</td>
+      <td>가르시아</td>
+      <td>2018</td>
+      <td>LG</td>
+      <td>0.339</td>
+      <td>50</td>
+      <td>183</td>
+      <td>27</td>
+      <td>62</td>
+      <td>9</td>
+      <td>0</td>
+      <td>8</td>
+      <td>95</td>
+      <td>34</td>
+      <td>5</td>
+      <td>0</td>
+      <td>9</td>
+      <td>8</td>
+      <td>25</td>
+      <td>3</td>
+      <td>0.519</td>
+      <td>0.383</td>
+      <td>9</td>
+      <td>177cm/93kg</td>
+      <td>1985년 04월 12일</td>
+      <td>내야수(우투우타)</td>
+      <td>쿠바 Ciego de Avila Maximo Gomez Baez(대)</td>
+      <td>NaN</td>
+      <td>0.902</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>1</td>
+      <td>강경학</td>
+      <td>2011</td>
+      <td>한화</td>
+      <td>0.000</td>
+      <td>2</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0.000</td>
+      <td>0.000</td>
+      <td>1</td>
+      <td>180cm/72kg</td>
+      <td>1992년 08월 11일</td>
+      <td>내야수(우투좌타)</td>
+      <td>광주대성초-광주동성중-광주동성고</td>
+      <td>10000만원</td>
+      <td>0.000</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+'''
+키/몸무게/포지션을 채워주려고 한다.
+선수 키/몸무게/포지션은 KBO 홈페이지에서, 그리고 우투우타, 좌투우타와 같은 경우는 위키백과에서 검색하여 가져왔다.
+'''
+
+'./batter_height_weight_position_insert.ipynb';
+
+
+from batter_height_weight_position_insert import crawl_hand
+
+df_path = '../datas/Regular_Season_Batter.csv'
+
+# regular_season = pd.read_csv(df_path)
+crawl_hand(regular_season, df_path)
+
+regular_season = pd.read_csv(df_path)
+```
+
+    ['강병식', '강봉규', '강정호', '고도현', '고동진', '고메즈', '고영민', '권용관', '김경모', '김경언', '김광연', '김대륙', '김동주', '김연훈', '김원석', '김원섭', '김종찬', '김종호', '나바로', '나성용', '대니돈', '로메로', '로사리오', '로티노', '마낙길', '모상기', '문우람', '박계현', '박기남', '박노민', '박상규', '박용근', '박재상', '박재홍', '박준서', '박진만', '박진원', '백승룡', '성의준', '손용석', '송지만', '스나이더', '신경현', '신명철', '신현철', '안치용', '알드리지', '양영동', '연경흠', '오재필', '용덕한', '우동균', '유선정', '유재혁', '윤완주', '윤요섭', '이명환', '이민재', '이승재', '이양기', '이여상', '이우민', '이인구', '이정식', '이종범', '이종환', '이태원', '이현곤', '이홍구', '이희근', '임재철', '장성호', '전현태', '정보명', '정상교', '정수성', '정현석', '정형식', '조성환', '조영훈', '조인성', '조중근', '지재옥', '진갑용', '차일목', '채상병', '최경철', '최동수', '최민구', '최선호', '최훈락', '칸투', '테임즈', '피에', '한상훈', '한윤섭', '현재윤', '홍성흔', '황목치승', '황선일', '황정립']
+    총 101
+
+
+    /home/apic/python/kbo_ops_predict/temp/batter_height_weight_position_insert.py:121: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.
+      df = pd.read_html(str(handle))[0]
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_name</th>
+      <th>height/weight</th>
+      <th>position</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1337</th>
+      <td>유재혁</td>
+      <td>182cm/70kg</td>
+      <td>외야수()</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+    starting_salary 1067
+    가져오지 못한 데이터는 일일이 넣기
+
+
+
+```python
+# def insert_batter_info(row, batter_height_weight_position):
+#     name = row['batter_name']
+#     if name in batter_height_weight_position:
+#         info = batter_height_weight_position[name]
+#         height_weight, position = info.split('/')[0] + '/' + info.split('/')[1], info.split('/')[2]
+        
+#         row['height/weight'] = height_weight
+#         row['position'] = position
+
+#         # display(row[['height/weight', 'position']])
+        
+#     return row
+
+with open('../output_data.json', 'r', encoding='utf-8') as json_file:
     data = json.load(json_file)
 print(type(data))
-data
-```
-
-
-```python
-'''
-위에서 만든 데이터를 적용해서 모두 채웠다.
-'''
-
-def insert_batter_info(row, batter_height_weight_position):
-    name = row['batter_name']
-    if name in batter_height_weight_position:
-        info = batter_height_weight_position[name]
-        height_weight, position = info.split('/')[0] + '/' + info.split('/')[1], info.split('/')[2]
-        
-        row['height/weight'] = height_weight
-        row['position'] = position
-
-        # display(row[['height/weight', 'position']])
-        
-    return row
+# data
 
 # apply를 사용하여 각 행에 대해 업데이트 적용
 regular_season = regular_season.apply(insert_batter_info, axis=1, batter_height_weight_position=data)
@@ -249,7 +302,121 @@ display(regular_season[regular_season['batter_name'] == '유재혁'][['batter_na
 regular_season.isna().sum()
 ```
 
+    <class 'dict'>
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_name</th>
+      <th>height/weight</th>
+      <th>position</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1337</th>
+      <td>유재혁</td>
+      <td>182cm/70kg</td>
+      <td>외야수(우투우타)</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+
+    batter_id             0
+    batter_name           0
+    year                  0
+    team                  0
+    avg                   0
+    G                     0
+    AB                    0
+    R                     0
+    H                     0
+    2B                    0
+    3B                    0
+    HR                    0
+    TB                    0
+    RBI                   0
+    SB                    0
+    CS                    0
+    BB                    0
+    HBP                   0
+    SO                    0
+    GDP                   0
+    SLG                   0
+    OBP                   0
+    E                     0
+    height/weight         0
+    year_born             0
+    position              0
+    career                0
+    starting_salary    1067
+    OPS                   0
+    dtype: int64
+
+
+
 
 ```python
+'''
+키 대비 몸무게 계산
+높다면 몸무게가 무거워 힘이 세고, 적으면 그만큼 가벼워 스피드가 빠를 것이라 예상
+힘은 연관된 장타율과, 스피드는 연관된 출루율과 상관관계를 분석
+'''
 
+# 키와 몸무게를 분리
+regular_season['height'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[0])[0]))
+regular_season['weight'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[1])[0]))
+
+# 키 대비 몸무게
+regular_season['weight_per_height'] = regular_season['weight'] / regular_season['height']
+
+plt.figure(figsize=(20,9))
+plt.subplot(1,2,1)
+
+obp_weight_corr = regular_season['weight_per_height'].corr(regular_season['OBP'])
+slg_weight_corr = regular_season['weight_per_height'].corr(regular_season['SLG'])
+
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['OBP'])
+plt.title('몸무게/키 OBP 상관관계, corr: '+str(round(obp_weight_corr, 2)))
+plt.ylabel('정규리그 OBP')
+plt.xlabel('몸무게/키')
+
+plt.subplot(1,2,2)
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['SLG'])
+plt.title('몸무게/키 SLG 상관관계, corr: '+str(round(slg_weight_corr, 2)))
+plt.ylabel('정규리그 SLG')
+plt.xlabel('몸무게/키')
+plt.show()
+
+'''
+선형적인 모습이 나오지 않는 것을 보아 상관관계는 없는 것 같다.
+''';
 ```
+
+
+    
+![png](/assets/img/kbo_ops_predict_post_img/kbo_opst_post_5/kbopredictpost_4_0.png)
+    
+
