--- a/_posts/studylog/python_post/2025-04-18-python_uv.md
+++ b/_posts/studylog/python_post/2025-04-18-python_uv.md
@@ -35,7 +35,106 @@ uv 설치 페이지에 가보면 이런 이미지도 있다.
 
 대표적인 이유로는 ```uv``` 개발 언어인 ```Rust```가 병렬 처리에 특화되어있는 언어인데다 속도도 매우 빠른 언어라고 한다.
 
-그래서 나중에 설치하는 모습을 보면 알겠지만 패키지를 설치하는데 여러 패키지들을 동시에 설치하는 모습을 볼 수 있다.
+```bash
+# pip install
+#!/bin/bash
+
+# 스크립트가 중단될 경우 대비
+set -e
+
+# 시작 시간 기록
+start_time=$(date +%s)
+
+# 가상환경 이름 설정
+VENV_NAME=".venv"
+
+python3 -m venv $VENV_NAME
+
+# 가상환경 활성화
+source $VENV_NAME/bin/activate
+
+# 패키지 설치
+pip install --upgrade pip
+pip install torch torchvision torchaudio
+
+# 종료 시간 기록
+end_time=$(date +%s)
+
+# 실행 시간 계산
+elapsed_time=$((end_time - start_time))
+
+# 완료 메시지와 시간 출력
+echo "가상환경이 성공적으로 설정되었습니다."
+echo "총 실행 시간: ${elapsed_time}초"
+```
+
+```
+가상환경이 성공적으로 설정되었습니다.
+총 실행 시간: 31초
+```
+
+```bash
+# uv install
+#!/bin/bash
+
+# 스크립트가 중단될 경우 대비
+set -e
+
+# 시작 시간 기록
+start_time=$(date +%s)
+
+uv init
+
+uv add torch torchvision torchaudio
+
+# 실행 시간 계산
+elapsed_time=$((end_time - start_time))
+
+# 완료 메시지와 시간 출력
+echo "가상환경이 성공적으로 설정되었습니다."
+echo "총 실행 시간: ${elapsed_time}초"
+```
+```bash
+Initialized project `temp-s`
+Using CPython 3.12.3 interpreter at: /usr/bin/python3.12
+Creating virtual environment at: .venv
+Resolved 29 packages in 56ms
+Installed 28 packages in 74ms
+ + filelock==3.18.0
+ + fsspec==2025.3.2
+ + jinja2==3.1.6
+ + markupsafe==3.0.2
+ + mpmath==1.3.0
+ + networkx==3.4.2
+ + numpy==2.2.4
+ + nvidia-cublas-cu12==12.4.5.8
+ + nvidia-cuda-cupti-cu12==12.4.127
+ + nvidia-cuda-nvrtc-cu12==12.4.127
+ + nvidia-cuda-runtime-cu12==12.4.127
+ + nvidia-cudnn-cu12==9.1.0.70
+ + nvidia-cufft-cu12==11.2.1.3
+ + nvidia-curand-cu12==10.3.5.147
+ + nvidia-cusolver-cu12==11.6.1.9
+ + nvidia-cusparse-cu12==12.3.1.170
+ + nvidia-cusparselt-cu12==0.6.2
+ + nvidia-nccl-cu12==2.21.5
+ + nvidia-nvjitlink-cu12==12.4.127
+ + nvidia-nvtx-cu12==12.4.127
+ + pillow==11.2.1
+ + setuptools==78.1.0
+ + sympy==1.13.1
+ + torch==2.6.0
+ + torchaudio==2.6.0
+ + torchvision==0.21.0
+ + triton==3.2.0
+ + typing-extensions==4.13.2
+가상환경이 성공적으로 설정되었습니다.
+총 실행 시간: -1744959161초
+```
+
+뭔가 생각한것 보다 충격적으로 빠르다...
+
+설치 시작하자마자 끝났다.
 
 ## Manage
 
